Fix: Login page on mobile

--- a/app/mobile-login/page.module.css
+++ b/app/mobile-login/page.module.css
@@ -13,7 +13,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 20vh;
+    height: 30vh;
     z-index: 0;
 }
 
